// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharityPreview renders horizontally 1`] = `
<div
  className="preview horizontal"
>
  <div
    className="image"
  >
    <Image
      as="img"
      ui={true}
    />
    <div
      className="time"
    >
      <span>
        05:22
      </span>
    </div>
  </div>
  <div
    className="info"
  >
    <div
      className="bold lines"
    />
    <div
      className="metadata"
    >
      <div
        className="title"
      />
      <div>
        <span>
          Invalid date
        </span>
        <p>
          Short description
        </p>
      </div>
    </div>
    <Button
      as="button"
      className="mini compact ui orange basic smaller"
    >
      <Icon
        as="i"
        name="heart outline"
      />
      Donate
    </Button>
    <a
      className="link"
      href="www.google.ca"
    >
      <Icon
        as="i"
        name="star outline"
      />
      Follow
    </a>
    <a
      className="link"
      href="www.google.ca"
    >
      <Icon
        as="i"
        name="share"
      />
      Share
    </a>
  </div>
</div>
`;

exports[`CharityPreview renders vertically 1`] = `
<div
  className="preview "
>
  <div
    className="image"
  >
    <Image
      as="img"
      ui={true}
    />
    <div
      className="time"
    >
      <span>
        05:22
      </span>
    </div>
  </div>
  <div
    className="info"
  >
    <div
      className="bold lines"
    />
    <div
      className="metadata"
    >
      <div
        className="title"
      />
      <div>
        <span>
          Invalid date
        </span>
        <p>
          Short description
        </p>
      </div>
    </div>
    <Button
      as="button"
      className="mini compact ui orange basic smaller"
    >
      <Icon
        as="i"
        name="heart outline"
      />
      Donate
    </Button>
    <a
      className="link"
      href="www.google.ca"
    >
      <Icon
        as="i"
        name="star outline"
      />
      Follow
    </a>
    <a
      className="link"
      href="www.google.ca"
    >
      <Icon
        as="i"
        name="share"
      />
      Share
    </a>
  </div>
</div>
`;
